fix: advanced search modal spacing

--- a/src/searchModal/scss/advancedSearch.scss
+++ b/src/searchModal/scss/advancedSearch.scss
@@ -9,7 +9,7 @@ $invalidCriteriaBorder: #266d9c;
     display: flex;
     flex-direction: column;
     &:not(:empty) {
-        padding: 0 0 16px 0;
+        padding: 0 0 32px 0;
     }
     .add-criteria-container {
         padding-top: 16px;
